@@ -192,16 +192,21 @@ cleanup
 case $OSTYPE in
         linux*)
                 sha=`sha1sum nsd-$version.tar.gz |  awk '{ print $1 }'`
+                sha256=`sha256sum nsd-$version.tar.gz |  awk '{ print $1 }'`
                 ;;
         FreeBSD*)
                 sha=`sha1  nsd-$version.tar.gz |  awk '{ print $5 }'`
+                sha256=`sha256  nsd-$version.tar.gz |  awk '{ print $5 }'`
                 ;;
 	*)
                 sha=`sha1sum nsd-$version.tar.gz |  awk '{ print $1 }'`
+                sha256=`sha256sum nsd-$version.tar.gz |  awk '{ print $1 }'`
                 ;;
 esac
 echo $sha > nsd-$version.tar.gz.sha1
+echo $sha256 > nsd-$version.tar.gz.sha256
 
 info "NSD distribution created successfully."
 info "SHA1sum: $sha"
+info "SHA256sum: $sha256"
 
